--- a/style.css
+++ b/style.css
@@ -1,59 +1,59 @@
 * {
     box-sizing: border-box;
-  }
-body{
+}
+
+body {
     background-color: #3AAFA9;
-    color :#17252A;
+    color: #17252A;
     font-family: sans-serif;
     margin: 0;
-    
 }
-#navbar{
-    background-color: #2B7A78;   
+
+#navbar {
+    background-color: #2B7A78;
     display: flex;
     justify-content: flex-end;
     position: fixed;
     width: 100%;
-    
-
 }
-
 
 #nav-list {
     list-style-type: none;
     text-transform: uppercase;
     font-size: 1.2em;
     display: flex;
-    justify-content: flex-end;
-   
-  
+    justify-content: space-between;
 }
 
-
-
-#nav-list a{
-    text-decoration: none;   
+#nav-list a {
+    text-decoration: none;
     color: #17252A;
     border-radius: 5px;
-    margin: 10px;
-  
-
+    padding: 10px;
 }
 
-#nav-list li:hover{
+#nav-list li:hover {
     animation-name: nav-item-animation;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
-@keyframes nav-item-animation{
-    100%{
-        background-color:#DEF2F1;
+
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    padding: 20px 0px;
+}
+
+@keyframes nav-item-animation {
+    100% {
+        background-color: #DEF2F1;
     }
 }
 
-
-
-#name-sec{
+#name-sec {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,32 +62,37 @@ body{
     height: 100vh;
     color: #3AAFA9;
 }
-#name-sec p{
+
+#name-sec p {
     font-style: italic;
     font-size: 1.5em;
     color: #DEF2F1;
 }
-#name-sec h1{  
+
+#name-sec h1 {
     font-size: 3.5em;
     margin-bottom: 0px;
 }
-#project{
-    text-align: center;
-    margin: 20px;
-}
-#courses{
+
+#project {
     text-align: center;
     margin: 20px;
 }
 
+#courses {
+    text-align: center;
+    margin: 20px;
+}
 
-#project h2, #courses h2{
-    font-size: 3em;   
+#project h2,
+#courses h2 {
+    font-size: 3em;
     text-align: center;
     margin-bottom: 0px;
 }
 
-#project button  ,#courses button{
+#project button,
+#courses button {
     font-size: 1.2em;
     background-color: #17252A;
     text-align: center;
@@ -99,150 +104,144 @@ body{
     height: 35px;
 }
 
-#project hr  ,#courses hr{
+#project hr,
+#courses hr {
     width: 75%;
     color: #17252A;
     margin-bottom: 40px;
 }
 
-.container{
+.container {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-content: center;
-    grid-template-rows:repeat(auto-fit,minmax(250px,1fr));
-    grid-gap : 20px 30px;
+    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px 30px;
     justify-content: center;
 }
 
-figure{
+figure {
     margin: 0;
     background-color: #17252A;
     color: #DEF2F1;
     border-radius: 2px;
-   
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
-figcaption{
+
+figcaption {
     display: flex;
     justify-content: center;
     font-size: 1em;
 }
 
-img{
+img {
     width: 100%;
     height: calc(100% - 2.8rem);
     object-fit: cover;
     border-radius: 2px;
 }
 
-#contact{
+#contact {
     height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #17252A;   
+    background-color: #17252A;
     color: #DEF2F1;
 }
-.contact-header h2{
+
+.contact-header h2 {
     font-size: 3.5em;
     margin-bottom: 0px;
 }
 
-.contact-header p{
+.contact-header p {
     font-size: 1.5em;
     font-style: italic;
     margin-left: 10px;
     margin-top: 5px;
     color: #2B7A78;
 }
-.contact-methods{
-    
-  
-   
-}
-#project a ,#courses a{
+
+.contact-methods {}
+
+#project a,
+#courses a {
     text-decoration: none;
     color: #feffff;
 }
-.contact-methods a{
-    display:inline-table;
+
+.contact-methods a {
+    display: inline-table;
     font: italic;
     font-size: 1.1em;
     margin: 15px;
     text-decoration: none;
     color: #DEF2F1;
-   
     transition: transform 0.3s ease-out;
-    
 }
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     font-size: 1.1em;
 }
 
-.contact-methods a:hover{
+.contact-methods a:hover {
     transform: translateY(8px);
 }
 
-.code{
+.code {
     font-size: 2em;
     transition: color .3s ease-out;
     color: #17252A;
 }
-figure:hover .code{
-    color:  #ff7f50;
+
+figure:hover .code {
+    color: #ff7f50;
 }
 
-#btn-show-all i{
+#btn-show-all i {
     transition: transform .3s ease-out;
 }
 
-#btn-show-all:hover i{
+#btn-show-all:hover i {
     transform: translateX(3px);
- 
-    
     color: #17252A;
 }
-#btn-show-all:hover{
+
+#btn-show-all:hover {
     background-color: #feffff;
     color: #17252A;
 }
 
-
 @media (max-width: 600px) {
-    #navbar{
-        font-size:.8em;
-        justify-content: center; 
+    #navbar {
+        font-size: .8em;
+        justify-content: center;
     }
-    
-    #nav-list a{
+    #nav-list a {
         margin-left: 0px;
         text-align: center;
     }
-  #name-sec p{
-   
-    font-size: 1.2em;
-   
-}
-#name-sec h1{  
-    font-size: 2em;
-    margin-bottom: 0px;
-    
-}
-    #name-sec{
+    #name-sec p {
+        font-size: 1.2em;
+    }
+    #name-sec h1 {
+        font-size: 2em;
+        margin-bottom: 0px;
+    }
+    #name-sec {
         text-align: center;
     }
-    #contact{
+    #contact {
         font-size: .8em;
         text-align: center;
     }
-       
-#project h2, #courses h2{
-    font-size: 1.5em;   
-}
-
+    #project h2,
+    #courses h2 {
+        font-size: 1.5em;
+    }
 }
