--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #3aafa9;
-  color: #17252a;
+  /* background-color: #3aafa9; */
+  /* color: #17252a; */
+  background-color: #ffff;
   font-family: sans-serif;
   margin: 0;
 }
 
 #navbar {
-  background-color: #2b7a78;
+  /* background-color: #2b7a78; */
+  background-color: #ffff;
   display: flex;
   justify-content: flex-end;
   position: fixed;
@@ -202,17 +204,16 @@ footer {
   transition: color 0.3s ease-out;
   color: #17252a;
 }
-.work-des{
+.work-des {
   /* list-style: none; */
   font-size: medium;
   text-align: start;
   line-height: 2;
   word-wrap: normal;
 }
-.work-heading{
+.work-heading {
   font: 200;
   font-size: xx-large;
-
 }
 figure:hover .code {
   color: #ff7f50;
